syntax = "proto3";

package api.admin.team;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "admin/model.proto";
import "enum.proto";
import "global.proto";

option go_package = "github.com/aide-family/moon/api/admin/team;team";
option java_multiple_files = true;
option java_package = "api.admin.team";

// 多租户下的团队管理
service Team {
  // 创建团队
  rpc CreateTeam (CreateTeamRequest) returns (CreateTeamReply) {
    option (google.api.http) = {
      post: "/v1/team"
      body: "*"
    };
  }

  // 更新团队
  rpc UpdateTeam (UpdateTeamRequest) returns (UpdateTeamReply) {
    option (google.api.http) = {
      put: "/v1/team/{id}"
      body: "*"
    };
  }

  // 获取团队详情
  rpc GetTeam (GetTeamRequest) returns (GetTeamReply) {
    option (google.api.http) = {
      get: "/v1/team/{id}"
    };
  }

  // 获取团队列表
  rpc ListTeam (ListTeamRequest) returns (ListTeamReply) {
    option (google.api.http) = {
      post: "/v1/team/list"
      body: "*"
    };
  }

  // 修改团队状态
  rpc UpdateTeamStatus (UpdateTeamStatusRequest) returns (UpdateTeamStatusReply) {
    option (google.api.http) = {
      put: "/v1/team/{id}/status"
      body: "*"
    };
  }

  // 我的团队， 查看当前用户的团队列表
  rpc MyTeam (MyTeamRequest) returns (MyTeamReply) {
    option (google.api.http) = {
      get: "/v1/my/team"
    };
  }

  // 添加团队成员
  rpc AddTeamMember (AddTeamMemberRequest) returns (AddTeamMemberReply) {
    option (google.api.http) = {
      post: "/v1/team/{id}/member/add"
      body: "*"
    };
  }

  // 移除团队成员
  rpc RemoveTeamMember (RemoveTeamMemberRequest) returns (RemoveTeamMemberReply) {
    option (google.api.http) = {
      delete: "/v1/team/{id}/member/{userId}"
    };
  }

  // 设置成管理员
  rpc SetTeamAdmin (SetTeamAdminRequest) returns (SetTeamAdminReply) {
    option (google.api.http) = {
      put: "/v1/team/{id}/member/{userId}/admin"
      body: "*"
    };
  }

  // 移除团队管理员
  rpc RemoveTeamAdmin (RemoveTeamAdminRequest) returns (RemoveTeamAdminReply) {
    option (google.api.http) = {
      delete: "/v1/team/{id}/member/{userId}/admin"
    };
  }

  // 设置成员角色
  rpc SetMemberRole (SetMemberRoleRequest) returns (SetMemberRoleReply) {
    option (google.api.http) = {
      put: "/v1/team/{id}/member/{userId}/role"
      body: "*"
    };
  }

  // 获取团队成员列表
  rpc ListTeamMember (ListTeamMemberRequest) returns (ListTeamMemberReply) {
    option (google.api.http) = {
      post: "/v1/team/{id}/member/list"
      body: "*"
    };
  }

  // 移交超级管理员
  rpc TransferTeamLeader (TransferTeamLeaderRequest) returns (TransferTeamLeaderReply) {
    option (google.api.http) = {
      put: "/v1/team/{id}/leader/transfer"
      body: "*"
    };
  }
}

message CreateTeamRequest {
  // 团队名称, 长度限制在3-20个字符
  string name = 1 [(buf.validate.field).required = true, (buf.validate.field).cel = {
    message: "团队名称长度在3-20个字符之间"
    expression: 'this.size() >= 3 && this.size() <= 20'
  }];
  // 团队描述, 长度限制在0-200个字符
  string remark = 2 [(buf.validate.field).cel = {
    message: "团队描述长度在0-100个字符之间"
    expression: 'this.size() <= 200'
  }];
  // 团队logo, 长度限制在0-200个字符
  string logo = 3 [(buf.validate.field).cel = {
    message: "团队logo长度在0-200个字符之间, 且必须是合法的URL"
    expression: 'this.size() == 0 || this.size() <= 200 && this.size() > 0 && this.isUri()'
  }];
  // 团队状态
  Status status = 4 [(buf.validate.field).required = true];
  // 负责人, 不传为自己
  uint32 leaderId = 5;
  // 管理员
  repeated uint32 adminIds = 6;
}
message CreateTeamReply {}

// 只允许修改基础信息
message UpdateTeamRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
  // 团队名称, 长度限制在3-20个字符
  string name = 2 [(buf.validate.field).required = true, (buf.validate.field).cel = {
    message: "团队名称长度在3-20个字符之间"
    expression: 'this.size() >= 3 && this.size() <= 20'
  }];
  // 团队描述, 长度限制在0-200个字符
  string remark = 3 [(buf.validate.field).cel = {
    message: "团队描述长度在0-100个字符之间"
    expression: 'this.size() <= 200'
  }];
  // 团队logo, 长度限制在0-200个字符
  string logo = 4 [(buf.validate.field).cel = {
    message: "团队logo长度在0-200个字符之间, 且必须是合法的URL"
    expression: 'this.size() == 0 || this.size() <= 200 && this.size() > 0 && this.isUri()'
  }];
  // 团队状态
  Status status = 5 [(buf.validate.field).required = true];
}
message UpdateTeamReply {}

message GetTeamRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
}
message GetTeamReply {
  Team team = 1;
}

message ListTeamRequest {
  string keyword = 1;
  PaginationReq pagination = 2 [(buf.validate.field).required = true];
  // 状态
  Status status = 3;
  // 创建人
  uint32 creatorId = 4;
  // 负责人
  uint32 leaderId = 5;
}
message ListTeamReply {
  PaginationReply pagination = 1;
  repeated Team list = 2;
}

message UpdateTeamStatusRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
  Status status = 2 [(buf.validate.field).required = true];
}
message UpdateTeamStatusReply {}

message MyTeamRequest {}
message MyTeamReply {
  repeated Team list = 1;
}

message AddTeamMemberRequest {
  message MemberItem {
    // 用户ID
    uint32 user_id = 1 [(buf.validate.field).required = true];
    // 是否设置为管理员
    Role role = 2;
    // 绑定的角色列表
    repeated uint32 roles = 3;
  }
  uint32 id = 1 [(buf.validate.field).required = true];
  repeated MemberItem members = 2 [(buf.validate.field).required = true];
}
message AddTeamMemberReply {}

message RemoveTeamMemberRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
  uint32 userId = 2 [(buf.validate.field).required = true];
}
message RemoveTeamMemberReply {}

message SetTeamAdminRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
  uint32 userId = 2 [(buf.validate.field).required = true];
}
message SetTeamAdminReply {}

message RemoveTeamAdminRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
  uint32 userId = 2 [(buf.validate.field).required = true];
}
message RemoveTeamAdminReply {}

message SetMemberRoleRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
  uint32 userId = 2 [(buf.validate.field).required = true];
  repeated uint32 roles = 3;
}
message SetMemberRoleReply {}

message ListTeamMemberRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
  string keyword = 2;
  PaginationReq pagination = 3 [(buf.validate.field).required = true];
  Gender gender = 4;
  Status status = 5;
  Role role = 6;
}
message ListTeamMemberReply {
  PaginationReply pagination = 1;
  repeated TeamMember list = 2;
}

message TransferTeamLeaderRequest {
  uint32 id = 1 [(buf.validate.field).required = true];
  uint32 userId = 2 [(buf.validate.field).required = true];
}
message TransferTeamLeaderReply {}