syntax = "proto3";

package api;

option go_package = "github.com/aide-family/moon/api;api";
option java_multiple_files = true;
option java_package = "api";

// 枚举类型
message EnumItem {
	// 枚举值
	int32 value = 1;
	// 枚举描述
	string label = 2;
}

// 数据状态
enum Status {
	// 全部
	STATUS_ALL = 0;
	// 启用
	STATUS_ENABLE = 1;
	// 禁用
	STATUS_DISABLE = 2;
}

// 性别
enum Gender {
	// 全部
	GENDER_ALL = 0;
	// 男
	GENDER_MALE = 1;
	// 女
	GENDER_FEMALE = 2;
}

// 系统全局默认角色， 区别于空间下自定义角色类型
enum Role {
	// 全部 / 未知
	ROLE_ALL = 0;
	// 管理员
	ROLE_SUPPER_ADMIN = 1;
	// 普通管理员
	ROLE_ADMIN = 2;
	// 普通用户
	ROLE_USER = 3;
}

// 数据来源
enum DataSource {
	// 全部
	DATA_SOURCE_ALL = 0;
	// 本地
	DATA_SOURCE_LOCAL = 1;
	// 远程
	DATA_SOURCE_REMOTE = 2;
}

// 验证码类型
enum CaptchaType {
	// 图片验证码
	CAPTCHA_TYPE_IMAGE = 0;
	// 音频验证码
	CAPTCHA_TYPE_AUDIO = 1;
}

// 领域类型枚举
enum DomainType {
	// 未知领域类型
	DomainTypeUnknown = 0;
	// 系统领域
	DomainTypeSystem = 1;
	// 监控领域
	DomainTypeMonitor = 2;
}

// 模块类型枚举
enum ModuleType {
	// 未知模块类型
	ModuleTypeUnknown = 0;
	// 接口模块
	ModelTypeApi = 1;
	// 菜单模块
	ModelTypeMenu = 2;
	// 角色模块
	ModelTypeRole = 3;
	// 用户模块
	ModelTypeUser = 4;
	// 字典模块
	ModelTypeDict = 5;
	// 配置模块
	ModelTypeConfig = 6;
	// 日志模块
	ModelTypeLog = 7;
	// 任务模块
	ModelTypeJob = 8;
	// 通知模块
	ModelTypeNotify = 9;
	// 系统模块
	ModelTypeSystem = 10;
	// 监控模块
	ModelTypeMonitor = 11;
}

// 数据源类型
enum DatasourceType {
	// 未知数据源类型
	DatasourceTypeUnknown = 0;
	// Metric
	DatasourceTypeMetric = 1;
	// Trace
	DatasourceTypeTrace = 2;
	// Log
	DatasourceTypeLog = 3;
}

// 存储器类型 prometheus、victoriametrics等
enum StorageType {
	// 未知存储器类型
	StorageTypeUnknown = 0;
	// Prometheus
	StorageTypePrometheus = 1;
	// VictoriaMetrics
	StorageTypeVictoriaMetrics = 2;
}

// MetricType 指标类型
enum MetricType {
	// 未知指标类型
	MetricTypeUnknown = 0;
	// Counter
	MetricTypeCounter = 1;
	// Gauge
	MetricTypeGauge = 2;
	// Histogram
	MetricTypeHistogram = 3;
	// Summary
	MetricTypeSummary = 4;
}

// 分类, 区分字典中的各个模块数据
enum DictType {
	// UNKNOWN 未知, 用于默认值
	CATEGORY_UNKNOWN = 0;

	// PromLabel 标签
	CATEGORY_PROM_LABEL = 1;

	// PromAnnotation 注解
	CATEGORY_PROM_ANNOTATION = 2;

	// PromStrategy 策略
	CATEGORY_PROM_STRATEGY = 3;

	// PromStrategyGroup 策略组
	CATEGORY_PROM_STRATEGY_GROUP = 4;

	// AlarmLevel 告警级别
	CATEGORY_ALARM_LEVEL = 5;

	// AlarmStatus 告警状态
	CATEGORY_ALARM_STATUS = 6;

	// NotifyType 通知类型
	CATEGORY_NOTIFY_TYPE = 7;
}

